[package]
authors = ["Łukasz Jan Niemier <lukasz@niemier.pl>"]
description = "Highly modular crypto & hash library written in pure Rust. WARNING!!! Not suitable for production."
documentation = "http://liboctavo.github.io/octavo"
homepage = "http://liboctavo.github.io/"
keywords = ["cryptography", "hash", "meta"]
license = "MIT"
name = "octavo"
readme = "README.md"
repository = "https://github.com/libOctavo/octavo"
version = "0.1.1"

[profile.release]
opt-level = 3
lto = true

[profile.bench]
opt-level = 3
lto = true

[dependencies]

[dependencies.octavo-crypto]
path = "./crypto"
version = "0.1.0"
optional = true

[dependencies.octavo-digest]
path = "./digest"
version = "0.1.0"
optional = true

[dependencies.octavo-kdf]
path = "./kdf"
version = "0.1.0"
optional = true

[dependencies.octavo-mac]
path = "./mac"
version = "0.1.0"
optional = true

[dev-dependencies]
openssl = "0.7.5"
quickcheck = "0.2.24"

[features]
default = ["crypto", "digest", "kdf", "mac"]
unstable = []

crypto = ["octavo-crypto"]
digest = ["octavo-digest"]
kdf = ["octavo-kdf"]
mac = ["octavo-mac"]
