[package]
authors = ["Łukasz Jan Niemier <lukasz@niemier.pl>"]
documentation = "http://liboctavo.github.io/octavo/octavo_crypto"
repository = "https://github.com/libOctavo/octavo"
name = "octavo-crypto"
description = "Octavo - Cryptosystems. WARNING!!! Not suitable for production"
license = "MIT"
version = "0.1.1"

[dependencies]
byteorder = "0.4.2"
generic-array = "0.2.0"
num = "0.1.30"
rand = "0.3.13"
typenum = "1.2.0"

[features]
unstable = []
