[package]
authors = ["Łukasz Jan Niemier <lukasz@niemier.pl>"]
homepage = "http://liboctavo.github.io/"
documentation = "http://liboctavo.github.io/octavo/octavo_crypto"
repository = "https://github.com/libOctavo/octavo"
readme = "README.md"
name = "octavo-crypto"
description = "Octavo - Cryptosystems. WARNING!!! Not suitable for production"
keywords = [
  "chacha20", "blowfish", "cryptography", "ciphers"
]
license = "MIT"
version = "0.1.1"

[dependencies]
byteorder = "0.4.2"
generic-array = "0.2.0"
num = "0.1.30"
rand = "0.3.13"
typenum = "1.2.0"

[features]
unstable = []
