[package]
authors = ["Łukasz Jan Niemier <lukasz@niemier.pl>"]
documentation = "http://liboctavo.github.io/octavo"
repository = "https://github.com/libOctavo/octavo"
name = "octavo-digest"
description = "Octavo - Cryptographic Hash Functions. WARNING!!! Not suitable for production"
license = "MIT"
version = "0.1.1"

[dependencies]
generic-array = "0.2.0"
static-buffer = "0.1.0"
typenum = "1.2.0"

[dependencies.byteorder]
features = ["no-std"]
version = "0.4.2"

[dev-dependencies]
rustc-serialize = "0.3.16"
toml = "0.1.27"

[features]
default = ["all"]
unstable = []

all = ["md5", "ripemd", "sha1", "sha2", "sha3", "tiger", "blake2"]
deprecated = ["md5", "ripemd", "sha1"]
safe = ["blake2", "sha2", "sha3"]

blake2 = []
md5 = []
ripemd = []
sha1 = []
sha2 = []
sha3 = []
tiger = []
