[package]
authors = ["Łukasz Jan Niemier <lukasz@niemier.pl>"]
homepage = "http://liboctavo.github.io/"
documentation = "http://liboctavo.github.io/octavo/octavo_digest"
repository = "https://github.com/libOctavo/octavo"
readme = "README.md"
name = "octavo-digest"
description = "Octavo - Cryptographic Hash Functions. WARNING!!! Not suitable for production"
keywords = [
  "md5", "sha", "sha1", "sha2", "sha3", "tiger", "blake2", "hash", "ripemd"
]
license = "MIT"
version = "0.1.2"

[profile.bench]
debug = true
lto = true

[dependencies]
generic-array = "0.2.0"
static-buffer = "0.1.0"
typenum = "1.2.0"

[dependencies.byteorder]
features = ["no-std"]
version = "0.4.2"

[dev-dependencies]
rustc-serialize = "0.3.16"
toml = "0.1.27"

[features]
default = ["all"]
unstable = []

all = ["md5", "ripemd", "sha1", "sha2", "sha3", "tiger", "blake2", "whirlpool"]
safe = ["blake2", "sha2", "sha3", "tiger"]
deprecated = ["md5", "ripemd", "sha1"]

blake2 = []
md5 = []
ripemd = []
sha1 = []
sha2 = []
sha3 = []
tiger = []
whirlpool = []
