[package]
authors = ["Łukasz Jan Niemier <lukasz@niemier.pl>"]
homepage = "http://liboctavo.github.io/"
documentation = "http://liboctavo.github.io/octavo/octavo_kdf"
repository = "https://github.com/libOctavo/octavo"
readme = "README.md"
name = "octavo-kdf"
description = "Octavo - Key Derivation Functions. WARNING!!! Not suitable for production"
keywords = [
  "bcrypt", "kdf", "passwords"
]
license = "MIT"
version = "0.1.1"

[dependencies]
byteorder = "0.4.2"

[dependencies.octavo-crypto]
path = "../crypto"
version = "0.1.0"

[features]
unstable = []
