[package]
authors = ["Łukasz Jan Niemier <lukasz@niemier.pl>"]
documentation = "http://liboctavo.github.io/octavo"
repository = "https://github.com/libOctavo/octavo"
name = "octavo-mac"
description = "Octavo - Message Authentication Codes. WARNING!!! Not suitable for production"
license = "MIT"
version = "0.1.0"

[dependencies]
generic-array = "0.2.0"

[dependencies.octavo-digest]
path = "../digest"
version = "0.1.0"

[features]
unstable = []
