[package]
authors = ["Łukasz Jan Niemier <lukasz@niemier.pl>"]
description = "Octavo - Message Authentication Codes. WARNING!!! Not suitable for production"
documentation = "http://liboctavo.github.io/octavo/octavo_kdf"
homepage = "http://liboctavo.github.io/"
keywords = ["mac", "hmac", "authentication"]
license = "MIT"
name = "octavo-mac"
readme = "README.md"
repository = "https://github.com/libOctavo/octavo"
version = "0.1.1"

[dependencies]
generic-array = "0.2.0"

[dependencies.octavo-digest]
path = "../digest"
version = "0.1.0"

[dev-dependencies]
openssl = "0.8.2"
quickcheck = "0.3.1"

[features]
unstable = []
